--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -77,7 +77,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=E31190648_Faiz-Muazzam_A
-main.class=Tampilan.Main
+main.class=SI_Laundry.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
